--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,182 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	
+	<title>Module-2 Assignment</title>
+	<link rel="stylesheet" type="text/css" href="mysheet.css">
+	<style>
+
+	.row{
+		width:100%;
+		background-color: black;
+	}	
+
+	#p1 {
+		background-color: #5F9EA0;
+	}
+
+	#p2 {
+		background-color:#FA8072;
+	}
+
+	#p3 {
+		background-color:#4682B4;
+	}
+	@media (min-width:992px) {
+		.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+			float:right;
+		}
+		.col-lg-1 {
+			width:8.33%;
+		}
+		.col-lg-2 {
+			width:16.66%;
+		}
+		.col-lg-3 {
+			width:25%;
+		}
+		.col-lg-4 {
+			width:33%;
+		}
+		.col-lg-5 {
+			width:41.66%;
+		}
+		.col-lg-6 {
+			width:50%;
+		}
+		.col-lg-7 {
+			width:58.33%;
+		}
+		.col-lg-8 {
+			width:66.66%;
+		}
+		.col-lg-9 {
+			width:74.99%;
+		}
+		.col-lg-10 {
+			width:83.33%;
+		}
+		.col-lg-11 {
+			width:91.66%;
+		}
+		.col-lg-12 {
+			width:100%;
+		}
+	}
+
+
+	@media (min-width:768px) and (max-width: 991px) {
+		.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+			float:right;
+		}
+		.col-md-1 {
+			width:8.33%;
+		}
+		.col-md-2 {
+			width:16.66%;
+		}
+		.col-md-3 {
+			width:25%;
+		}
+		.col-md-4 {
+			width:33%;
+		}
+		.col-md-5 {
+			width:41.66%;
+		}
+		.col-md-6 {
+			width:50%;
+		}
+		.col-md-7 {
+			width:58.33%;
+		}
+		.col-md-8 {
+			width:66.66%;
+		}
+		.col-md-9 {
+			width:74.99%;
+		}
+		.col-md-10 {
+			width:83.33%;
+		}
+		.col-md-11 {
+			width:91.66%;
+		}
+		.col-md-12 {
+			width:100%;
+		}
+	}
+
+
+	@media (max-width: 767px) {
+		.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+			float:right;
+		}
+		.col-sm-1 {
+			width:8.33%;
+		}
+		.col-sm-2 {
+			width:16.66%;
+		}
+		.col-sm-3 {
+			width:25%;
+		}
+		.col-sm-4 {
+			width:33%;
+		}
+		.col-sm-5 {
+			width:41.66%;
+		}
+		.col-sm-6 {
+			width:50%;
+		}
+		.col-sm-7 {
+			width:58.33%;
+		}
+		.col-sm-8 {
+			width:66.66%;
+		}
+		.col-sm-9 {
+			width:74.99%;
+		}
+		.col-sm-10 {
+			width:83.33%;
+		}
+		.col-sm-11 {
+			width:91.66%;
+		}
+		.col-sm-12 {
+			width:100%;
+		}
+	}
+</style>
 </head>
 <body>
-<h1>Hello Coursera. Its a great course</h1>
+<h1>COURSERA COURSE !</h1>
+
+
+<div class="row">
+	<div class="col-lg-4 col-md-6 col-sm-12">
+
+    <h2 id="p1">HTML</h2>
+    <p> <br/> <br/> 
+    Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.
+    Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance.</p>
+    </div>
+
+    <div class="col-lg-4 col-md-6 col-sm-12">
+    <h2 id="p2">CSS</h2>
+    <p> <br/> <br/> 
+   Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.
+   CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts.This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics</p>
+    </div>
+
+    <div class="col-lg-4 col-md-12 col-sm-12">
+    <h2 id="p3">JS</h2>
+    <p> <br/> <br/> 
+   JavaScript often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.JavaScript is high-level, often just-in-time compiled, and multi-paradigm. It has curly-bracket syntax, dynamic typing, prototype-based object-orientation, and first-class functions.
+   Alongside HTML and CSS, JavaScript is one of the core technologies of the World Wide Web.avaScript enables interactive web pages and is an essential part of web applications.</p>
+    </div>
+
 </body>
 </html>
