--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>assignment solution for module 3</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/mysheet.css">
+<link rel="stylesheet" href="mysheet.css">
 <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel='stylesheet' type="text/css">
 </head>
 
